Work on Edit profile feature

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,14 +2,16 @@
   %h1
     CREATE AN ACCOUNT
 
+  //resource is a user here
+
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
     = devise_error_messages!
     = render "form", { :f => f }
 
     .submit
       %div
-        = image_submit_tag("email_signup_conf_btn.jpg", :id => "submit")
+        = f.submit "Sign Me Up!"
 
-      .cancel.hidden
-        %a{ :href => "#"} cancel
+      .cancel
+        %a{ :href => "#"} Cancel
 
