--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,8 +63,8 @@
               %a{:href => "#"} Technical Support
 
 
-
-  //= javascript_include_tag :defaults,"jquery-ui-1.8.12.custom.min", "jquery-SimpleModal-1.4.1", "jquery_textLimit", "jqModal", "jquery_tgcCountdown", "jquery.maskedinput"
+  = javascript_include_tag :defaults, "jquery.min"
+  /= javascript_include_tag :defaults,"jquery-ui-1.8.12.custom.min"#, "jquery-SimpleModal-1.4.1", "jquery_textLimit", "jqModal", "jquery_tgcCountdown", "jquery.maskedinput"
   -@custom_javascripts.uniq.each do |js|
     = javascript_include_tag js
 
